Add spring, hibernate ... dependencies

--- a/src/main/java/com/bouhouch/catalog/web/package_fr.properties
+++ b/src/main/java/com/bouhouch/catalog/web/package_fr.properties
@@ -3,3 +3,4 @@ reference.stringLength = Le champ référence doit être entre 3 et 10 caractères
 designation.requiredstring = Le champ désignation est obligatoire
 quantity.int = Le champ quantité doit être un entier
 price.double = Le champ prix doit être un double
+designation.label = Désignation
